--- a/styles/admin/mainAdmin.css
+++ b/styles/admin/mainAdmin.css
@@ -10,6 +10,10 @@
     text-decoration: none;
 }
 
+a {
+    color: #FFFFFF;
+}
+
 button {
     cursor: pointer;
 }
@@ -22,30 +26,36 @@ body {
     grid-template-areas:
     "lateral busca"
     "lateral dashboard";
+    grid-auto-rows: min-content auto;
 }
 
 main {
     grid-area: dashboard;
-}
-
-.menu__busca {
-    grid-area: busca;
+    margin-top: 36px;
 }
 
 header {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 40px);
     background-color: #4563BF;
     border-radius: 15px;
     padding: 15px;
     color: #FFFFFF;
     grid-area: lateral;
+    position: fixed;
+    width: 15%;
+}
+
+.menu__lateral {
+    display: grid;
+    gap: 36px;
 }
 
 .menu__lateral div {
     display: flex;
     flex-direction: column;
+    gap: 12px;
 }
 
 .menu__lateral button {
@@ -55,8 +65,15 @@ header {
 
 .menu__busca {
     display: flex;
-    flex-grow: 1;
     align-items: center;
+    grid-area: busca;
+    position: fixed;
+    top: 0;
+    left: calc(15% + 24px);
+    width: calc(85% - 24px);
+    z-index: 1000;
+    background-color: #FFFFFF;
+    padding: 20px;
 }
 
 .menu__busca input {
@@ -89,7 +106,7 @@ header {
     color: #2135A6;
     font-weight: 400;
     font-style: normal;
-    font-size: 12pt;  
+    font-size: 12pt;
 }
 
 #conteudo__titulo {
