--- a/styles/admin/novoProduto.css
+++ b/styles/admin/novoProduto.css
@@ -1,3 +1,5 @@
+/* ------------ GERAL ------------ */
+
 #conteudo__titulo {
     display: flex;
     flex-direction: row;
@@ -7,13 +9,14 @@
 
 .formulario {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 18px;
     grid-template-areas:
-        ". botao-cadastrar"
-        "div-geral div-imagem"
-        "div-valor div-imagem"
-        "div-status div-imagem";
+        ". . botao-cadastrar"
+        "div-geral div-geral div-imagem"
+        "div-valor div-oferta div-imagem"
+        "div-novidade div-novidade div-imagem"
+        "div-estoque div-estoque div-imagem";
 }
 
 fieldset {
@@ -31,6 +34,7 @@ fieldset h3 {
     margin-bottom: 12px;
 }
 
+
 .formulario label{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -39,9 +43,17 @@ fieldset h3 {
     margin-bottom: 6px;
 }
 
+.formulario p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;
+}
+
 .formulario input {
     border: 0;
     outline: 0;
+    height: 24px;
     margin-bottom: 18px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -89,26 +101,13 @@ fieldset h3 {
     border: 2px solid #4563BF;
 }
 
+/* ------------ INFOS GERAIS ------------ */
+
 .formulario__geral {
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
     grid-area: div-geral;
-}
-
-#divId {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 18px;
-}
-
-#divId label {
-    margin: 0 18px 0 0;
-}
-
-#divId input {
-    margin-bottom: 0;
 }
 
 .formulario__geral input {
@@ -151,25 +150,186 @@ fieldset h3 {
     font-size: 12pt;
 }
 
+#divId {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 18px;
+}
+
+#divId label {
+    margin: 0 18px 0 0;
+}
+
+#divId input {
+    margin-bottom: 0;
+}
+
+/* ------------ PRECO ------------ */
+
+/* ------------ PRECO ------------ */
+
 .formulario__valor {
     background-color: #F2F2F2;
     grid-area: div-valor;
 }
 
 .formulario__valor input {
-    height: 24px;
-    background-color: #F2F2F2
-}
-
-.formulario__status {
     background-color: #F2F2F2;
-    grid-area: div-status;
 }
 
-.formulario__status input {
+.divPrecos {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Ajuste o espaçamento entre os campos conforme necessário */
+}
+
+.preco__container {
+    display: flex;
+    align-items: center;
+}
+
+.preco__container label {
+    margin-right: 10px; /* Ajuste a margem conforme necessário */
+}
+
+.preco__container input {
+    flex: 1;
+    width: 100%;
+    background-color: #F2F2F2;
+    margin-bottom: 0;
+    border: 0;
+    outline: 0;
     height: 24px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;
+    border-bottom: 1px solid #4563BF;
+    color: #4563BF;
+}
+
+/* ------------ OFERTA ------------ */
+
+.formulario__oferta {
+    background-color: #F2F2F2;
+    grid-area: div-oferta;
+}
+
+.formulario__oferta input {
+    background-color: #F2F2F2;
+}
+
+.divOferta {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.oferta__input {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 18px;
+}
+
+.oferta__input label {
+    margin: 0 9px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+}
+
+.oferta__input input[type="radio"] {
+    margin: 0 6px 0 0;
+    appearance: none;
+    height: 12px;
+    width: 12px;
+    border-radius: 6px;
+    border: 2px solid #4563BF;
+    font: inherit;
+    float: left;
+}
+
+.oferta__input input[type="radio"]:checked {
+    background-color: #4563BF;
+}
+
+.oferta__preco input {
+    margin-bottom: 0;
+}
+
+/* ------------ NOVIDADE ------------ */
+
+.formulario__novidade {
+    background-color: #F2F2F2;
+    grid-area: div-novidade;
+}
+
+.formulario__novidade input {
     background-color: #F2F2F2
 }
+
+.novidade__container {
+    display: flex;
+    flex-direction: row;
+}
+
+.novidade__container label {
+    margin: 0 9px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+}
+
+.novidade__container input[type="radio"] {
+    margin: 0 6px 0 0;
+    appearance: none;
+    height: 12px;
+    width: 12px;
+    border-radius: 6px;
+    border: 2px solid #4563BF;
+    font: inherit;
+    float: left;
+}
+
+.oferta__input input[type="radio"]:checked {
+    background-color: #4563BF;
+}
+
+/* ------------ ESTOQUE ------------ */
+
+.formulario__estoque {
+    background-color: #F2F2F2;
+    grid-area: div-estoque;
+}
+
+.estoque__container {
+    display: flex;
+    align-items: center;
+}
+
+.estoque__container label {
+    margin: 0 10px 0 0;
+}
+
+.estoque__container input {
+    flex: 1;
+    width: 100%;
+    background-color: #F2F2F2;
+    margin-bottom: 0;
+    border: 0;
+    outline: 0;
+    height: 24px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;
+    border-bottom: 1px solid #4563BF;
+    color: #4563BF;
+}
+
+/* ------------ IMAGEM ------------ */
 
 .formulario__imagem {
     display: flex;
@@ -179,13 +339,14 @@ fieldset h3 {
 }
 
 .formulario__imagem input {
-    height: 24px;
     background-color: #ADC0D9
 }
 
 .formulario__imagem input::placeholder {
     color: #000000;
 }
+
+/* ------------ BOTAO ------------ */
 
 .formulario__botao {
     grid-area: botao-cadastrar;
