--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -361,6 +361,13 @@ input[type="radio"]:checked {
     font-weight: 700;
 }
 
+button:disabled:hover {
+    font-weight: 100;
+    cursor: not-allowed;
+}
+
+/* ------------ FOOTER ------------ */
+
 footer {
     display: flex;
     flex-direction: row;
@@ -427,15 +434,15 @@ footer {
 }
 
 /* ------------ POP UP CONCLUSÃO ------------ */
-
 .container__conclusao {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    display: none;
+    display: none;    
 }
 
 .container__conclusao--exibir {
     display: flex;
+    flex-direction: column;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
 }
 
 .conclusao__planoDeFundo {
@@ -446,7 +453,10 @@ footer {
     height: 100%;
     background-color: #FFFFFF90;
     z-index: 999;
-    padding: 240px 480px;
+    display: flex;
+    align-items: center; /* Alinha o popup verticalmente no centro */
+    justify-content: center; /* Alinha o popup horizontalmente no centro */
+    padding: 0; /* Remove o padding */
 }
 
 .conclusao__popup {
@@ -455,8 +465,8 @@ footer {
     align-items: center;
     justify-content: space-between;
     background-color: #F2F2F2;
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
     border-radius: 24px;
     padding: 24px;
     position: relative;
@@ -466,20 +476,22 @@ footer {
 .popup__mensagem {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     padding-top: 48px;
 }
 
 .popup__mensagem img {
-    width: 300px;
-    height: 300px;
+    width: 240px;
+    height: 240px;
+    margin-bottom: 24px;
 }
 
-.popup__mensagem h2 {
+.popup__mensagem p {
     font-weight: 300;
     font-style: normal;
-    font-size: 24pt;
+    font-size: 18pt;
     align-self: center;
+    text-align: center;
 }
 
 .popup__botao {
@@ -494,9 +506,4 @@ footer {
     font-weight: 500;
     font-style: normal;
     font-size: 12pt;
-}
-
-
-.acesso__popUp button:hover {
-    background-color: #2135A6;
 }
