--- a/styles/produto.css
+++ b/styles/produto.css
@@ -17,17 +17,24 @@ main {
 }
 
 .conteudo__imagens {
-    flex-direction: column;
-    align-items: center;
+    width: auto;
     grid-area: imagens;
 }
 
 .imagens__produto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 6px;
     background-color: #7999D9;
     width: 100%;
     height: 100%;
     border-radius: 15px;
     justify-self: center;
+}
+
+.imagens__produto img {
+margin: 6px;
 }
 
 /* .imagens__relacionados {
