--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,11 @@ header nav img {
     grid-area: cadastro;
 }
 
+#imagemLogo {
+    width: 192px;
+    height: 192px;
+}
+
 /* ------------ POP UP PERFIL ------------ */
 
 .acesso__perfil {
