uso do JSON para atualizacao do estoque dos produtos conforme compras sao finalizadas

--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -51,7 +51,14 @@ main {
 }
 
 .item__imagem {
+    width: 90px;
+    height: 90px;
     grid-area: imagem;
+}
+
+.item__imagem img {
+    width: 90px;
+    height: 90px;
 }
 
 .item__nome {
