--- a/styles/admin/filtro.css
+++ b/styles/admin/filtro.css
@@ -1,18 +1,32 @@
 .conteudo__produto {
     display: grid;
+    grid-template-columns: 10fr 2fr;
+    gap: 9px;
+    grid-template-areas:
+        "divProduto botao";
+}
+
+.produto__div{
+    display: grid;
     background-color: #F2F2F2;
-    min-height: 90px;
+    height: 72px;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 15px;
-    grid-template-areas:
-    "imagem nome preco quantidade subtotal"
-    "imagem categoria preco quantidade deletar";
+    align-items: center;
+    grid-template-areas: 
+        "imagem nome preco estoque";
+    grid-area: divProduto;
     color: #000000;
 }
 
 .produto__imagem {
     grid-area: imagem;
+}
+
+.produto__imagem img {
+    width: 72px;
+    height: 72px;
 }
 
 .produto__nome {
@@ -35,7 +49,7 @@
     flex-direction: row;
     align-items: top;
     justify-content: space-evenly;
-    grid-area: quantidade;
+    grid-area: estoque;
     font-family: "Roboto", sans-serif;
     font-weight: 800;
     font-style: bold;
@@ -61,19 +75,23 @@
     font-style: normal;
     font-size: 24pt;
     color: #2135A6;
+    grid-area: botao;
 }
 
-
-.item__quantidade #quantidade__qtde {
-    font-weight: 100;
-    font-style: normal;
-}
-
-.item__subtotal {
+.conteudo__container button {
     display: flex;
-    justify-content: right;
-    font-weight: 900;
-    font-style: bold;
-    font-size: 15pt;
-    grid-area: subtotal;
+    justify-content: center;
+    align-items: center;
+    background-color: #4563BF;
+    width: 100%;
+    height: 72px;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 12pt;
+    text-align: center;
 }
