--- a/styles/admin/produto.css
+++ b/styles/admin/produto.css
@@ -409,7 +409,7 @@ fieldset h3 {
 
 /* ------------ BOTAO ------------ */
 
-.formulario__botoes {
+.formulario__botoesEdicao {
     display: grid;
     gap: 9px;
     grid-template-columns: 1fr 2fr;
@@ -417,7 +417,7 @@ fieldset h3 {
         "botaoExcluir botaoSalvar" ;
 }
 
-.formulario__botoes button {
+.formulario__botoesEdicao button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -425,7 +425,7 @@ fieldset h3 {
     padding: 5px 0;
     margin-bottom: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 15px;
     color: #FFFFFF;
     font-family: "Roboto", sans-serif;
@@ -436,8 +436,32 @@ fieldset h3 {
     grid-area: botao-cadastrar;
 }
 
-.formulario__botoes button:hover {
-    
+.formulario__botoesEdicao button:hover {
+    background-color: #2135A6;
+    font-weight: 700;    
+}
+
+#botaoCadastrar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4563BF;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 12pt;
+    text-align: center;
+}
+
+#botaoCadastrar:hover {
+    background-color: #2135A6;
+    font-weight: 700;
 }
 
 #botaoExcluir {
